--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,2 +1,10 @@
-- name: Github Release create, update, and upload assets
-  uses: meeDamian/github-release@v2.0.3
+n:
+  release:
+    types:
+      - created
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
